# mcp-reticle

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/reticle-cli/: Cargo.toml
crates/reticle-cli/src/: http_proxy.rs  main.rs  proxy.rs
crates/reticle-core/: Cargo.toml
crates/reticle-core/src/: error.rs  events.rs  lib.rs  protocol.rs  session_names.rs  session_recorder.rs  storage.rs  token_counter.rs  transport.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ControlBar.tsx  DemoControls.tsx  Inspector.tsx  KeyboardShortcuts.tsx  LogStream.tsx  Logo.tsx  ProxyControls.tsx  RecordingControls.tsx  RequestComposer.tsx  SessionTags.tsx  Sidebar.tsx  ThemeToggle.tsx  theme-provider.tsx
frontend/src/components/ui/: alert-dialog.tsx  dropdown-menu.tsx
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/store/: index.test.ts  index.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
scripts/: README.md  install.sh  mock-mcp-agent.py  mock-mcp-server.py  mock-mcp-sse-server.py  requirements-sse.txt  test-error-server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  security.rs
src-tauri/src/commands/: cli_bridge.rs  demo.rs  interaction.rs  mod.rs  proxy.rs  recording.rs  sessions.rs  tokens.rs
src-tauri/src/config/: app_config.rs  defaults.rs  mod.rs
src-tauri/src/core/: cli_bridge.rs  mod.rs  protocol.rs  proxy.rs  server_analyzer.rs  session_recorder.rs  socket_bridge.rs  sse_proxy.rs  streamable_proxy.rs  token_counter.rs  transport.rs  websocket_proxy.rs
src-tauri/src/events/: log_events.rs  mod.rs  recording_events.rs  session_events.rs
src-tauri/src/mock_data/: generator.rs  mod.rs
src-tauri/src/state/: app_state.rs  mod.rs  proxy_state.rs
src-tauri/src/storage/: mod.rs
