[package]
name = "reticle"
version = "0.1.0"
description = "Real-time debugging tool for Model Context Protocol (MCP) servers with dual transport support"
authors = ["Reticle Team"]
license = "BSL-1.1"
repository = "https://github.com/labterminal/reticle"
homepage = "https://github.com/labterminal/reticle"
keywords = ["mcp", "debugging", "json-rpc", "proxy", "tauri"]
categories = ["development-tools::debugging", "development-tools"]
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "reticle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
bytes = "1.5"
async-trait = "0.1"
dirs = "5.0"

# Error handling
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/SSE transport
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
futures = "0.3"

# Database - embedded key-value store
sled = "0.34"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
