[package]
name = "reticle-cli"
version = "0.1.0"
description = "CLI for Reticle - Real-time debugging proxy for MCP servers"
authors = ["Reticle Team"]
license = "MIT"
repository = "https://github.com/labterminal/mcp-reticle"
homepage = "https://github.com/labterminal/mcp-reticle"
keywords = ["mcp", "debugging", "proxy", "cli"]
categories = ["development-tools::debugging", "command-line-utilities"]
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "reticle"
path = "src/main.rs"

[dependencies]
# Unix socket sink doesn't need websocket feature
reticle-core = { path = "../reticle-core" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP proxy dependencies
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"

# WebSocket proxy dependencies
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# GUI launcher utilities
shellexpand = "3"
which = "6"
open = "5"
dirs = "5"

# Archive extraction for auto-download
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

[target.'cfg(windows)'.dependencies]
# Windows-specific process handling if needed

[dev-dependencies]
tempfile = "3"
