[package]
name = "reticle-core"
version = "0.1.0"
description = "Core library for Reticle - protocol types, token counting, and session recording"
authors = ["Reticle Team"]
license = "MIT"
repository = "https://github.com/labterminal/reticle"
homepage = "https://github.com/labterminal/reticle"
keywords = ["mcp", "json-rpc", "protocol", "proxy"]
categories = ["development-tools::debugging", "development-tools"]
edition = "2021"
rust-version = "1.70"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "net", "io-util"] }
async-trait = "0.1"

# WebSocket client for CLI-to-GUI bridge
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Database - embedded key-value store
sled = "0.34"

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"

[features]
default = []
websocket = ["tokio-tungstenite", "futures-util"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
